--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://sgoku.github.io/ChekupAI",
+  "homepage": "https://gokulsrinaths.github.io/ChekupAI",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
